# SoftDevToolbox-course

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
PROJECT/pdf/: project.tex  project.tex.backup
PROJECT/slides/: Untitled Document
PROJECT/tests/: executable  minimum
src/: example.cpp
tests/: test1.cpp  test2.cpp
